# veri-store

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  veristore-report.tex
docs/: api.md  architecture.md  design_choices.md
docs/Security Model/: veristore_security_model.tex
docs/experiments/: bandwidth.md  collision-probability.md  pentest-attack-matrix.md  pentest-integrity-plan.md  theorem_3_4.md  verification_time.md
docs/final-report/: veristore-report.tex
examples/: basic_store_retrieve.py  byzantine_detection_demo.py  fail_with_2_byzantine_nodes.py  fail_with_3_crashes.py  fault_tolerance_demo.py  reconstruct_from_2_crashes.py
fastapi/: requirements.txt
readings-and-sources/claude-summaries/: 002-touchOfPrivacy-summary.md  003-secureFingerprintAuthentication-summary.md  homomorphic_fingerprinting_theory.tex
readings-and-sources/cs588-finalproject-readingnotes/: cs588-projectReadings-master.tex
scripts/: benchmark_bandwidth.py  benchmark_latency.py  benchmark_throughput.py  benchmark_verification_time.py  estimate_collision_probability.py  pentest_integrity.py  run_servers.sh  test_fragment.py  verify_theorem_3_4.py
src/: __init__.py
src/erasure/: __init__.py  decoder.py  encoder.py  matrix.py
src/fingerprint/: __init__.py  field.py  fingerprint.py  polynomial.py
src/network/: __init__.py  client.py  protocol.py  rate_limit.py  server.py
src/storage/: __init__.py  fragment.py  metadata.py  store.py
src/verification/: __init__.py  cross_checksum.py  oracle.py  verifier.py
tests/: __init__.py
(+56 files in other folders)
