[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "veri-store"
version = "0.1.0"
description = "Distributed erasure-coded object storage with homomorphic fingerprint verification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "galois>=0.3.8",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Allow plain `import src.*` without installing the package
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests", "examples"]
